@@ -102,7 +102,16 @@ Deprecated methods removed:
 - LocalDate.toDateTimeAtMidnight()
 - LocalDate.toDateTimeAtMidnight(DateTimeZone)
 
-Everything else still compatible, including the generics AFAIK.
+Apart from the removal of the deprecated methods above, everything else should be binary compatible.
+Testing has included clirr, javap and manual testing of old files with new code.
+If you find something that isn't binary compatible then please let us know, although it may be too late to fix it.
+
+Any direct implementations of ReadableInstant or ReadableDuration are not source compatible.
+This is because of the additional generics in Comparable.
+Your code will be source compatible if you extended AbstractInstant or AbstractDuration.
+This very minor source compatability change was deemed to be the best balance of the various
+difficult options that generics offers.
+As mentioned above, erasure ensures that this source incompatibility is *not* a binary compatibility.
 
 Serialization compatible - Yes
 
